--- a/.github/workflows/openlane.yml
+++ b/.github/workflows/openlane.yml
@@ -6,14 +6,11 @@ jobs:
   run-openlane:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Install Docker
-        uses: docker/setup-buildx-action@v3
 
       - name: Run OpenLane
         run: |
-          docker run -v ${{ github.workspace }}:/project \
+          docker run --rm -v ${{ github.workspace }}:/openlane \
             efabless/openlane:latest \
-            bash -c "cd /project && flow.tcl -design OpenLane_FinalYear"
+            ./flow.tcl -design my_project
