--- a/.github/workflows/openlane.yml
+++ b/.github/workflows/openlane.yml
@@ -1,16 +1,25 @@
 name: OpenLane Flow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+      - '**'   # run on all branches (optional)
 
 jobs:
   run-openlane:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Run OpenLane
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Run OpenLane Flow
         run: |
           docker run --rm -v ${{ github.workspace }}:/openlane \
+            -w /openlane/openlane \
             efabless/openlane:latest \
-            ./flow.tcl -design my_project
+            ./flow.tcl -designs_dir designs/picosoc/designs/my_project
