--- a/.github/workflows/openlane.yml
+++ b/.github/workflows/openlane.yml
@@ -2,24 +2,31 @@ name: OpenLane Flow
 
 on:
   push:
-    branches:
-      - main
-      - '**'   # run on all branches (optional)
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   run-openlane:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Run OpenLane Flow
+      - name: Debug: list repo files
         run: |
-          docker run --rm -v ${{ github.workspace }}:/openlane \
-            -w /openlane/openlane \
-            efabless/openlane:latest \
-            ./flow.tcl -designs_dir designs/picosoc/designs/my_project
+          echo "=== Repo root ==="
+          ls -R
+
+      - name: Run OpenLane inside Docker
+        env:
+          DESIGN: my_project   # <--- Change this if your design folder has a different name
+        run: |
+          IMAGE="efabless/openlane:latest"
+          docker pull $IMAGE
+          echo "Using image: $IMAGE"
+
+          docker run --rm \
+            -v "${{ github.workspace }}":/openlane/designs \
+            $IMAGE \
+            bash -lc "cd /openlane && ./flow.tcl -design designs/${DESIGN}"
